[gd_scene load_steps=6 format=3 uid="uid://ce354qef3vhlv"]

[ext_resource type="Script" uid="uid://bollgfumbl8ca" path="res://scripts/hud.gd" id="1_ahhtf"]
[ext_resource type="Texture2D" uid="uid://bdxd5lecgvm77" path="res://entities/HUD/boresight.png" id="2_oo0fn"]
[ext_resource type="Texture2D" uid="uid://bc3yhqespdpli" path="res://entities/HUD/velocity_marker.png" id="3_5ysmq"]
[ext_resource type="Texture2D" uid="uid://c584mqrjrfofd" path="res://entities/HUD/throttle_meter.png" id="4_6fi6k"]
[ext_resource type="Texture2D" uid="uid://cliufksdtl5al" path="res://entities/HUD/tick_small.png" id="5_uo2fv"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahhtf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="lv" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="lift" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="lift_yaw" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="drag" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="drag_coe" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="lift_coe" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="thrust" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Boresight" type="Sprite2D" parent="."]
modulate = Color(0.184314, 0.968627, 0.156863, 1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_oo0fn")

[node name="VelocityMarker" type="Sprite2D" parent="."]
modulate = Color(0.184314, 0.968627, 0.156863, 1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_5ysmq")

[node name="ThrottleContainer" type="HBoxContainer" parent="."]
modulate = Color(0.184314, 0.968627, 0.156863, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ThrottleMeterR" type="Sprite2D" parent="ThrottleContainer"]
position = Vector2(130, 0)
rotation = -3.14159
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_6fi6k")

[node name="ThrottleMeterL" type="Sprite2D" parent="ThrottleContainer"]
position = Vector2(-130, 0)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_6fi6k")

[node name="TickSmall" type="Sprite2D" parent="ThrottleContainer"]
position = Vector2(-110, 115)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_uo2fv")

[node name="AltSpeedContainer" type="HBoxContainer" parent="."]
modulate = Color(0.184314, 0.968627, 0.156863, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -20.0
offset_right = 32.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 300

[node name="Alt" type="Label" parent="AltSpeedContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "10000"

[node name="Speed" type="Label" parent="AltSpeedContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "1000"

[node name="Auto_Throttle_Cont" type="HBoxContainer" parent="."]
modulate = Color(0.184314, 0.968627, 0.156863, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.321181
anchor_top = 0.623457
anchor_right = 0.345486
anchor_bottom = 0.625
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Auto_Throttle_Label" type="Label" parent="Auto_Throttle_Cont"]
layout_mode = 2
text = "AT"

[node name="Gear_Cont" type="HBoxContainer" parent="."]
modulate = Color(0.184314, 0.968627, 0.156863, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.321181
anchor_top = 0.623457
anchor_right = 0.345486
anchor_bottom = 0.625
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Gear_Label" type="Label" parent="Gear_Cont"]
layout_mode = 2
text = "Gear Down"
